tests/fail/derive_field_attributes.stderr
error: expected an expression after `=`
 --> tests/fail/derive_field_attributes.rs:3:37
  |
3 | struct TestNoValue(#[sscanf(default =)] u8);
  |                                     ^

error: expected `=`
 --> tests/fail/derive_field_attributes.rs:7:38
  |
7 | struct TestNoEquals(#[sscanf(default 5)] u8);
  |                                      ^

error: expected identifier
  --> tests/fail/derive_field_attributes.rs:11:29
   |
11 | struct TestNoIdent(#[sscanf(= 5)] u8);
   |                             ^

error: format strings can only be specified on structs and struct variants, not fields
  --> tests/fail/derive_field_attributes.rs:15:35
   |
15 | struct TestFormatInField(#[sscanf(format = "")] u8);
   |                                   ^^^^^^

error: expected either `default` or `map`, got `bob`
  --> tests/fail/derive_field_attributes.rs:19:32
   |
19 | struct TestUnknownArg(#[sscanf(bob = 5)] u8);
   |                                ^^^

error: unrecognized arguments
  --> tests/fail/derive_field_attributes.rs:23:45
   |
23 | struct TestDuplicateArg(#[sscanf(default = 5, default = 5)] u8);
   |                                             ^^^^^^^^^^^^^

error: fields can only have one `sscanf` attribute
  --> tests/fail/derive_field_attributes.rs:27:53
   |
27 | struct TestDuplicateMultiArg(#[sscanf(default = 5)] #[sscanf(default = 5)] u8);
   |                                                     ^^^^^^^^^^^^^^^^^^^^^^

error: unrecognized arguments
  --> tests/fail/derive_field_attributes.rs:31:46
   |
31 | struct TestDefaultAndMap(#[sscanf(default = 5, map = |x: usize| { x as u8 })] u8);
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: fields can only have one `sscanf` attribute
  --> tests/fail/derive_field_attributes.rs:35:54
   |
35 | struct TestDefaultAndMapMulti(#[sscanf(default = 5)] #[sscanf(map = |x: usize| { x as u8 })] u8);
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: FromScanf: field `0` is not specified in the format string and has no default value. You must specify exactly one of these.
       The syntax for default values is: `#[sscanf(default)]` to use Default::default() or `#[sscanf(default = ...)]` to provide a custom value.
  --> tests/fail/derive_field_attributes.rs:39:66
   |
39 | struct TestNoPlaceholder(#[sscanf(map = |x: usize| { x as u8 })] u8);
   |                                                                  ^^

error: format for map attributes is `#[sscanf(map = |<arg>: <type>| <conversion>`)]
  --> tests/fail/derive_field_attributes.rs:43:32
   |
43 | struct TestMapNoValue(#[sscanf(map)] u8);
   |                                ^^^

error: map attribute expects a closure like `|<arg>: <type>| <conversion>` after `=`
  --> tests/fail/derive_field_attributes.rs:47:41
   |
47 | struct TestMapNotClosure(#[sscanf(map = "")] u8);
   |                                         ^^

error: expected `map` closure to take exactly one argument
  --> tests/fail/derive_field_attributes.rs:51:38
   |
51 | struct TestMapNoParam(#[sscanf(map = || { x as u8 })] u8);
   |                                      ^^

error: `map` closure has to specify the type of the argument
  --> tests/fail/derive_field_attributes.rs:55:38
   |
55 | struct TestMapNoType(#[sscanf(map = |x| { x as u8 })] u8);
   |                                      ^

error: expected `map` closure to take exactly one argument
  --> tests/fail/derive_field_attributes.rs:59:51
   |
59 | struct TestMapMoreTypes(#[sscanf(map = |x: usize, y: usize| { x as u8 })] u8);
   |                                                   ^^^^^^^^

error[E0308]: mismatched types
  --> tests/fail/derive_field_attributes.rs:65:48
   |
65 | struct TestDefaultWrongType(#[sscanf(default = "")] u8);
   |                                                ^^ expected `u8`, found `&str`

error[E0308]: mismatched types
  --> tests/fail/derive_field_attributes.rs:69:53
   |
69 | struct TestMapWrongReturn(#[sscanf(map = |x: usize| { x })] u8);
   |                                                     ^^^^^ expected `u8`, found `usize`

error[E0277]: the trait bound `&usize: Default` is not satisfied
  --> tests/fail/derive_field_attributes.rs:73:48
   |
73 | struct TestDefaultNoDefault(#[sscanf(default)] &'static usize);
   |                                                ^^^^^^^^^^^^^^ the trait `Default` is not implemented for `&usize`
   |
   = help: the following other types implement trait `Default`:
             f32
             f64
             i128
             i16
             i32
             i64
             i8
             isize
           and $N others
